--- a/clusters/prod/exporters/sync-to-healthy/kustomization.yaml
+++ b/clusters/prod/exporters/sync-to-healthy/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd   # exporter lives here (you can change to observability)
+namespace: exporter # exporter lives here (you can change to observability)
 resources:
   - rbac.yaml
   - deployment.yaml
