--- a/clusters/prod/exporters/sync-to-healthy/service.yaml
+++ b/clusters/prod/exporters/sync-to-healthy/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: argocd-sync-to-healthy-exporter
-  namespace: argocd
+  namespace: exporter
   labels:
     app: sync-to-healthy-exporter
 spec:
