--- a/clusters/prod/exporters/sync-to-healthy/deployment.yaml
+++ b/clusters/prod/exporters/sync-to-healthy/deployment.yaml
@@ -51,5 +51,5 @@ spec:
         securityContext:
           runAsNonRoot: true
           allowPrivilegeEscalation: false
+          runAsUser: 10001 
           readOnlyRootFilesystem: true
-   
