--- a/clusters/prod/exporters/pod-deploy-timing/kustomization-pod.yaml
+++ b/clusters/prod/exporters/pod-deploy-timing/kustomization-pod.yaml
@@ -1,4 +1,3 @@
-# This is for pod-level changes
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
@@ -9,5 +8,5 @@ resources:
   - servicemonitor-pod.yaml
 images:
   - name: ghcr.io/your-org/pod-deploy-timing
-    newName: ghcr.io/your-org/pod-deploy-timing
-    newTag: v1.0.0
+    newName: docker.io/pb122136/pod-deploy-timing   # This is for pod-level changes
+    newTag: v2.0.0                                   # This is for pod-level changes
