--- a/clusters/prod/exporters/pod-deploy-timing/rbac-pod.yaml
+++ b/clusters/prod/exporters/pod-deploy-timing/rbac-pod.yaml
@@ -1,4 +1,3 @@
-# This is for pod-level changes
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -14,8 +13,12 @@ rules:
   resources: ["pods", "namespaces"]
   verbs: ["get", "list", "watch"]
 - apiGroups: ["apps"]
-  resources: ["replicasets"]
+  resources: ["replicasets", "deployments", "statefulsets"]  
   verbs: ["get", "list", "watch"]
+# (Optional) Agar DaemonSet bhi dekhna ho:
+# - apiGroups: ["apps"]
+#   resources: ["daemonsets"]
+#   verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
